<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="guruthinkmobile.com.homework_6_customdrawables.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <View
        style="@style/ViewAndroid"
        android:id="@+id/v_androidLogo"/>

    <Button
        style="@style/Button_Style"
        android:id="@+id/btn"
        android:layout_below="@+id/v_androidLogo"
        android:textColor="@color/button_colorlist"
        android:text="@string/btn_text" />

    <EditText
        style="@style/EditText_Style"
        android:id="@+id/et_1"
        android:layout_below="@id/btn"
        android:text="@string/et_text1"
        android:enabled="true"/>

    <EditText
        style="@style/EditText_Style"
        android:id="@+id/et_2"
        android:layout_below="@id/et_1"
        android:text="@string/et_text2"
        android:enabled="true" />

    <EditText
        style="@style/EditText_Style"
        android:id="@+id/et_3"
        android:layout_below="@id/et_2"
        android:text="@string/et_text3"
        android:enabled="false"/>

    <TextView
        style="@style/TextView"
        android:id="@+id/tv"
        android:layout_below="@id/et_3"
        android:text="@string/lorem"
        />

    <Button
        style="@style/Button_Square"
        android:id="@+id/btn_square"
        android:layout_below="@id/tv" />
</RelativeLayout>
</ScrollView>